Fix an infinite recursion in the color label selector

The size of the spacer should be changed not in resizeEvent()
(which causes an infinite recursion), but in showEvent(), right
before the widget is displayed to the user

BUG:456201